# xspress-detector

./: .gitattributes  .gitignore  Dockerfile  README  README.md  build  build.sh  build_py.sh
.github/workflows/: container.yml  python.yml
configure/: RELEASE
control/: MANIFEST.in  README.md  setup.cfg  setup.py
control/libxspress-wrapper/include/: LibXspressWrapper.h  XspressController.h  XspressDAQ.h  XspressDetector.h
control/libxspress-wrapper/src/: CMakeLists.txt  LibXspressWrapper.cpp  XspressControlApp.cpp  XspressController.cpp  XspressDAQ.cpp  XspressDetector.cpp
control/xspress/: Pipfile  README.md  calibration_files.py  config_parser.py  definitions.py  efuse_id_parser.py  hl_detector.py  parameter.py  requirements.txt  server.py  setup.cfg  setup.py
control/xspress-control/: Pipfile
control/xspress-control/src/xspress_odin/: adapter.py  detector.py  message.py  server.py
control/xspress/client/: __init__.py  config_parser.py
control/xspress/src/xspress_odin/: _version_git.py  adapter.py  client.py  detector.py  fp_xspress_adapter.py  live_view_merge.py  parameter_tree.py  server.py  util.py  xspress_meta_writer.py
control/xspress/test/: test_parameter_tree.py  test_util.py
cpp/: CMakeLists.txt
cpp/cmake/: FindLIBXSPRESS.cmake  FindODINDATA.cmake
cpp/control/: CMakeLists.txt
cpp/control/include/: LibXspressSimulator.h  LibXspressWrapper.h  XspressDetector.h
cpp/control/src/: CMakeLists.txt  LibXspressSimulator.cpp  LibXspressWrapper.cpp  XspressDAQ.cpp  XspressDetector.cpp
cpp/data/: CMakeLists.txt
cpp/data/frameProcessor/include/: XspressProcessPlugin.h
cpp/data/frameProcessor/src/: XspressListModeProcessPluginLib.cpp  XspressProcessPlugin.cpp
cpp/data/frameReceiver/include/: XspressFrameDecoder.h  XspressListModeFrameDecoder.h
cpp/frameProcessor/src/: XspressProcessPluginLib.cpp
cpp/frameReceiver/src/: XspressListModeFrameDecoderLib.cpp
cpp/xspressWrapper/include/: ILibXspress.h  version.h.in
cpp/xspressWrapper/src/: ILibXspress.cpp  LibXspressSimulator.cpp  LibXspressWrapper.cpp  XspressControlApp.cpp  XspressController.cpp
data/: CMakeLists.txt
data/common/include/: XspressDefinitions.h  xspress3Definitions.h  xspress3MagicNumbers.h
data/frameProcessor/include/: XspressListModeProcessPlugin.h  XspressProcessPlugin.h
data/frameProcessor/src/: CMakeLists.txt  Makefile  XspressListModeProcessPlugin.cpp  XspressProcessPlugin.cpp  XspressProcessPluginLib.cpp
data/frameReceiver/include/: XspressFrameDecoder.h  XspressListModeFrameDecoder.h
data/frameReceiver/src/: CMakeLists.txt  Makefile  XspressFrameDecoder.cpp  XspressFrameDecoderLib.cpp  XspressListModeFrameDecoder.cpp  cmake_install.cmake
data/include/: version.h
example-config/: fp1.json  fr1.json  functions.sh  log4cxx.xml  odin_server.cfg  stControlServer.sh  stFrameProcessor1.sh  stFrameReceiver1.sh  stOdinServer.sh  static  xspress.json
example-config/static/: index.html
example-config/static/js/: odin-data.js
example/xspress3/: fp1.json  fr1.json  odin_server.cfg  stControlServer.sh  stFrameProcessor1.sh  stFrameProcessor2.sh  stFrameReceiver1.sh  stLiveViewMerge.sh  stMetaWriter.sh  stOdinServer.sh
example/xspress4/: fp1.json  fp2.json  fp3.json  fp4.json  fp5.json  fp6.json  fp7.json  fp8.json  fp9.json  fr1.json  fr2.json  fr3.json  fr4.json  fr5.json  fr6.json  fr7.json  fr8.json  fr9.json  odin_server.cfg  stControlServer.sh  stFrameProcessor2.sh  stFrameProcessor3.sh  stFrameProcessor4.sh  stFrameProcessor5.sh  stFrameProcessor6.sh  stFrameProcessor7.sh  stFrameProcessor8.sh  stFrameProcessor9.sh  stFrameReceiver2.sh  stFrameReceiver3.sh  stFrameReceiver4.sh  stFrameReceiver5.sh  stFrameReceiver6.sh  stFrameReceiver7.sh  stFrameReceiver8.sh  stFrameReceiver9.sh  stLiveViewMerge.sh  stMetaWriter.sh  stOdinServer.sh
python/: MANIFEST.in  Pipfile  README.md  setup.cfg
python/src/odin_data/frame_processor/: fp_xspress_adapter.py
python/src/odin_data/meta_writer/: xspress_meta_writer.py
python/src/xspress_detector/: __init__.py  _version.py
python/src/xspress_detector/control/: adapter.py  client.py  debug.py  detector.py  fp_xspress_adapter.py  live_view_merge.py  message.py  parameter_tree.py  server.py
python/src/xspress_detector/control/static/: index.html
python/src/xspress_detector/data/: xspress_meta_writer.py
python/tests/: test_parameter_tree.py  test_util.py
tools/python/odin_data/meta_writer/: __init__.py  xspress_meta_writer.py
